[package]
name = "ros2_rust_pubsub_example"
version = "0.1.0"
edition = "2021"

safe_drive = "0.2"
ros2_rust_util = {git = "https://github.com/TakanoTaiga/ros2_rust_util.git"}
std_msgs = "*"

msg = ["std_msgs"]
msg_dir = "/tmp/.msg/"
safe_drive_version = "0.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rclrs = "*"
