<?xml version="1.0"?>
<package format="2">
  <name>ros2_rust_pubsub_example</name>
  <version>0.0.1</version>
  <description>A simple ROS 2 and Rust integration example</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

